--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,104 @@ header .container .col-md-7 button{
     font-size: 0.9em;
     color: rgba(0, 0, 0, 0.5);
 }
+
+/* section 2 */
+
+.cover{
+    width: 100%;
+    height: 50vmin;
+    background: url('../assets/pexels-photo-452738.jpeg');
+    background-position: -24rem -19rem;
+    background-size: 150%;
+    position: relative;
+}
+
+.cover .content{
+    background: rgba(0, 0, 0, 0.7);
+    height: 100%;
+    width: 100%;
+    padding-top: 19vmin;
+}
+
+.cover .content>h1{
+    font-family: var(--Patua);
+    font-size: 6vmin;
+    color: whitesmoke;
+}
+
+.cover .content>p{
+    font-family: var(--Rubik);
+    font-size: 2vmin;
+    color: #e5e5e5;
+}
+
+/* Running numbers */
+
+.numbers .rect{
+    position: relative;
+    z-index: 1;
+    background: white;
+    width: 17rem;
+    height: 12rem;
+    padding-top: 3.5vmin;
+    margin: 1rem;
+    border-radius: 0.5em;
+    box-shadow: 1px 2px 50px 0px rgba(255, 0, 0, 0.349);
+}
+
+.numbers{
+    margin-top: -15vmin;
+}
+
+.numbers .rect h1{
+    font-size: 5rem;
+    color: tomato;
+}
+
+.numbers .rect p{
+    font-family: var(--Patua);
+}
+
+.purchase>h1{
+    padding-top: 15vmin;
+    padding-bottom: 0.1rem;
+    font-family: var(--Lobster);
+}
+
+.purchase>p{
+    color: var(--light-black);
+    font-size: 3vmin;
+    padding-bottom: 10vmin;
+}
+
+.purchase .cards .card{
+    width: 22rem;
+    margin: 3vmin;
+}
+
+.cards div{
+    margin: 0;
+    padding: 0;
+}
+
+.cards .title{
+    background: rgba(208, 241, 241, 0.199);
+    padding: 1.4rem 2.5rem;
+    font-size: 2.5vmin;
+}
+
+.cards .card-text{
+    padding: 2.5rem 3.5rem;
+    color: var(--light-black);
+}
+
+.card-body .pricing{
+    background: rgba(208, 241, 241, 0.199);
+    border-top-right-radius: 170px;
+    border-top-left-radius: 170px;
+}
+
+.card-body .pricing>h1{
+    font-size: 10vmin;
+    padding: 1em 0.5em;
+}
