--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
 @import url("https://fonts.googleapis.com/css?family=Acme|Lobster|Patua+One|Rubik|Sniglet");
 
 /* *{} is a global selector, which selects all the html tags */
-*{
+* {
     box-sizing: border-box;
 }
 
-header, section{
+header,
+section {
     overflow-x: hidden;
 }
 
 /* Custom variables and properties */
-:root{
+:root {
     --Sniglet-font: "Sniglet", cursive;
     --Rubik: "Rubik", cursive;
     --Patua: "Patua One", cursive;
@@ -20,7 +21,7 @@ header, section{
     --light-gray: rgba(255, 255, 255, 0.877);
 }
 
-header a{
+header a {
     font-family: var(--Sniglet-font);
     font-size: 0.9em;
     color: whitesmoke;
@@ -29,9 +30,9 @@ header a{
 header {
     background: #dd2476;
     background: var(--bggradient);
-  }
+}
 
-.dropdown-content{
+.dropdown-content {
     display: none;
     position: absolute;
     background: white;
@@ -40,97 +41,101 @@ header {
     z-index: 1;
 }
 
-.dropdown-content a{
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
-.dropdown-content a:hover{
+
+.dropdown-content a:hover {
     background: #ddd;
 }
-.dropdown:hover .dropdown-content{
+
+.dropdown:hover .dropdown-content {
     display: block;
 }
 
-header .nav-item:last-child{
+header .nav-item:last-child {
     padding-right: 10.5em;
 }
 
-header .nav-item{
+header .nav-item {
     padding: 0.9em;
 }
 
-header .nav-down{
+header .nav-down {
     padding: 0.9em;
 }
 
-header .navbar-brand{
+header .navbar-brand {
     padding-left: 8rem;
 }
 
-header .nav-link{
+header .nav-link {
     color: white;
 }
 
-header .nav-link:hover{
+header .nav-link:hover {
     color: black;
 }
-
-header .row .col-md-5{
+header .navbar-toggler:hover{
+    color: white;
+}
+header .row .col-md-5 {
     padding: 4.2vmin 1vmin;
 }
 
-header .row .col-md-7{
+header .row .col-md-7 {
     padding: 22vmin 1vmin;
     padding-bottom: 35vmin;
     font-family: var(--Rubik);
     color: white;
 }
 
-header .row .col-md-5 img{
+header .row .col-md-5 img {
     width: 90%;
 }
 
-header .container .col-md-7 h6{
+header .container .col-md-7 h6 {
     padding: 1vmin;
     letter-spacing: 4px;
 }
 
-header .container .col-md-7 h1{
+header .container .col-md-7 h1 {
     padding: 0.1em 0em;
     font-size: 8vmin;
     font-weight: bold;
 }
 
-header .container .col-md-7 p{
+header .container .col-md-7 p {
     padding: 1vmin 5vmin;
 }
 
-header .container .col-md-7 button{
+header .container .col-md-7 button {
     border-radius: 30px;
     font-weight: bold;
-}    
+}
 
 /* header ends */
 
 /* sectio-1 */
 
-.section-1{
+.section-1 {
     padding: 20vmin 0;
 }
 
-.section-1 .row .col-md-6 .pray img{
+.section-1 .row .col-md-6 .pray img {
     opacity: 0.8;
     width: 80%;
     border-radius: 0.2em;
 }
 
-.section-1 .row .col-md-6:last-child{
+.section-1 .row .col-md-6:last-child {
     position: relative;
 }
 
-.section-1 .row .col-md-6 .panel{
+.section-1 .row .col-md-6 .panel {
     position: absolute;
     top: 15vmin;
     left: -25vmin;
@@ -143,20 +148,20 @@ header .container .col-md-7 button{
     z-index: 1;
 }
 
-.section-1 .row .col-md-6 .panel h1{
+.section-1 .row .col-md-6 .panel h1 {
     font-weight: bold;
     padding: 0.4em 0;
     font-size: 2em;
 }
 
-.section-1 .row .col-md-6 .panel p{
+.section-1 .row .col-md-6 .panel p {
     font-size: 0.9em;
     color: rgba(0, 0, 0, 0.5);
 }
 
 /* section 2 */
 
-.cover{
+.cover {
     width: 100%;
     height: 50vmin;
     background: url('../assets/pexels-photo-452738.jpeg');
@@ -165,20 +170,20 @@ header .container .col-md-7 button{
     position: relative;
 }
 
-.cover .content{
+.cover .content {
     background: rgba(0, 0, 0, 0.7);
     height: 100%;
     width: 100%;
     padding-top: 19vmin;
 }
 
-.cover .content>h1{
+.cover .content>h1 {
     font-family: var(--Patua);
     font-size: 6vmin;
     color: whitesmoke;
 }
 
-.cover .content>p{
+.cover .content>p {
     font-family: var(--Rubik);
     font-size: 2vmin;
     color: #e5e5e5;
@@ -186,7 +191,7 @@ header .container .col-md-7 button{
 
 /* Running numbers */
 
-.numbers .rect{
+.numbers .rect {
     position: relative;
     z-index: 1;
     background: white;
@@ -198,85 +203,85 @@ header .container .col-md-7 button{
     box-shadow: 1px 2px 50px 0px rgba(255, 0, 0, 0.349);
 }
 
-.numbers{
+.numbers {
     margin-top: -15vmin;
 }
 
-.numbers .rect h1{
+.numbers .rect h1 {
     font-size: 5rem;
     color: tomato;
 }
 
-.numbers .rect p{
+.numbers .rect p {
     font-family: var(--Patua);
 }
 
-.purchase>h1{
+.purchase>h1 {
     padding-top: 15vmin;
     padding-bottom: 0.1rem;
     font-family: var(--Lobster);
 }
 
-.purchase>p{
+.purchase>p {
     color: var(--light-black);
     font-size: 3vmin;
     padding-bottom: 10vmin;
 }
 
-.purchase .cards .card{
+.purchase .cards .card {
     width: 22rem;
     margin: 3vmin;
 }
 
-.cards div{
+.cards div {
     margin: 0;
     padding: 0;
 }
 
-.cards .title{
+.cards .title {
     background: rgba(208, 241, 241, 0.199);
     padding: 1.4rem 2.5rem;
     font-size: 2.5vmin;
 }
 
-.cards .card-text{
+.cards .card-text {
     padding: 2.5rem 3.5rem;
     color: var(--light-black);
 }
 
-.card-body .pricing{
+.card-body .pricing {
     background: rgba(208, 241, 241, 0.199);
     border-top-right-radius: 170px;
     border-top-left-radius: 170px;
 }
 
-.card-body .pricing>h1{
+.card-body .pricing>h1 {
     font-size: 10vmin;
     padding: 1em 0.5em;
 }
 
 /* section3 */
 
-.section-3{
+.section-3 {
     height: 70vmin;
     margin-top: 15vmin;
     background: var(--bggradient);
 }
 
-.section-3 .col-md-12>h1{
+.section-3 .col-md-12>h1 {
     padding: 2em 0em 0.5em 0em;
     color: whitesmoke;
     font-size: 6vmin;
 }
 
-.section-3 .col-md-12>p{
+.section-3 .col-md-12>p {
     padding: 0.4em;
     padding-bottom: 2em;
     color: var(--light-gray);
     font-size: 3vmin;
 }
 
-.section-3 .desktop{
+.section-3 .desktop {
     background: white;
     display: inline-block;
     border-radius: 3em;
@@ -284,10 +289,75 @@ header .container .col-md-7 button{
     margin: 1em;
 }
 
-.section-3 .desktop h3{
+.section-3 .desktop h3 {
     font-size: 4vmin;
 }
 
-.section-3 .desktop p{
+.section-3 .desktop p {
     font-size: 2vmin;
+}
+
+/* section 4 */
+.section-4 .container h1 {
+    font-size: 6vmin;
+    padding-top: 14vmin;
+}
+
+.section-4 .team {
+    padding: 10vmin 4vmin;
+}
+
+.section-4 .card {
+    width: 22rem;
+    margin-top: 10vmin;
+}
+
+.section-4 .card .card-text {
+    padding: 0.5em;
+}
+
+.section-4 .card .card-body>a {
+    font-size: 1.5em;
+}
+
+.section-4 .carousel-item {
+    padding-left: 3rem;
+}
+
+.border-radius {
+    border-radius: 340px;
+    width: 60%;
+}
+
+/* Footer  */
+
+footer {
+    background:  rgba(0, 0, 0, 0.815);
+    overflow-x: hidden;
+    padding: 14vmin 18vmin;
+}
+
+footer p>span{
+    color: #ff512f;
+}
+
+footer input{
+    border-color: black !important;
+}
+
+footer input::placeholder{
+    color: white !important;
+}
+
+footer .input-group .input-group-text{
+    background: var(--bggradient);
+    border: none;
+}
+
+footer .column i{
+    color: #dd2476;
+}
+
+footer .column i + i{
+    padding: 0 0.5em;
 }
